# Balancia

./: Balancia.pem  README.md
backend/: .gitignore  README.md  env.example  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: allocation.py  health.py  ocr.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: allocation_service.py  ocr_service.py
backend/tests/: test_allocation.py  test_ocr.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: BillSettings.tsx  ItemAllocationPage.tsx  ItemsTable.tsx  NLPromptInput.tsx  OCRUploader.tsx  PeopleManager.tsx  ResultsPage.tsx
frontend/src/services/: api.ts
frontend/src/store/: useStore.ts
